k8s/tz-wrapped/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tz-wrapped-backend
  namespace: tz-wrapped
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - tz-wrapped.prod.gke.papers.tech
      secretName: tz-wrapped-prod-tls
    - hosts:
        - foundry-backend.wrappedtz.io
      secretName: foundry-backend-tls
  rules:
    - host: tz-wrapped.prod.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: tz-wrapped-backend
              servicePort: 80
    - host: foundry-backend.wrappedtz.io
      http:
        paths:
          - backend:
              serviceName: tz-wrapped-backend
              servicePort: 80
